# portable_ws_deque

./: README.md  portable_ws_deque.opam
src/: portable_ws_deque.ml  portable_ws_deque.mli
test/: dune  test_ws_deque.ml
