(library
 (name portable_ws_deque_test)
 (libraries await base concurrent concurrent.in_thread core
   expect_test_helpers_core.expect_test_helpers_base portable
   portable_ws_deque threads)
 (preprocess
  (pps ppx_assert ppx_compare ppx_expect ppx_quick_test ppx_sexp_message
    ppx_sexp_value ppx_with)))
